// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialsSection should display the confiramtion as optional if the password field is empty 1`] = `
<WithStyles(ForwardRef(FormControl))
  component="fieldset"
  fullWidth={true}
>
  <WithStyles(ForwardRef(FormLabel))
    component="legend"
    style={
      Object {
        "margin": "1rem 0",
      }
    }
  >
    Your credentials:
  </WithStyles(ForwardRef(FormLabel))>
  <WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      label="Password"
      onChange={[Function]}
      type="password"
      value=""
    />
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      label="Password confirmation"
      onChange={[Function]}
      required={false}
      type="password"
      value=""
    />
    <PasswordRequirements
      password={
        Object {
          "isValid": true,
          "value": "",
        }
      }
    />
  </WithStyles(ForwardRef(FormGroup))>
</WithStyles(ForwardRef(FormControl))>
`;

exports[`CredentialsSection should display the password and confiramtion value 1`] = `
<WithStyles(ForwardRef(FormControl))
  component="fieldset"
  fullWidth={true}
>
  <WithStyles(ForwardRef(FormLabel))
    component="legend"
    style={
      Object {
        "margin": "1rem 0",
      }
    }
  >
    Your credentials:
  </WithStyles(ForwardRef(FormLabel))>
  <WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      label="Password"
      onChange={[Function]}
      type="password"
      value="password value"
    />
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      label="Password confirmation"
      onChange={[Function]}
      required={true}
      type="password"
      value="confirmation value"
    />
    <PasswordRequirements
      password={
        Object {
          "isValid": true,
          "value": "password value",
        }
      }
    />
  </WithStyles(ForwardRef(FormGroup))>
</WithStyles(ForwardRef(FormControl))>
`;

exports[`CredentialsSection should show error if any 1`] = `
<WithStyles(ForwardRef(FormControl))
  component="fieldset"
  fullWidth={true}
>
  <WithStyles(ForwardRef(FormLabel))
    component="legend"
    style={
      Object {
        "margin": "1rem 0",
      }
    }
  >
    Your credentials:
  </WithStyles(ForwardRef(FormLabel))>
  <WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(TextField))
      error={true}
      fullWidth={true}
      helperText="password error"
      label="Password"
      onChange={[Function]}
      type="password"
      value="password value"
    />
    <WithStyles(ForwardRef(TextField))
      error={true}
      fullWidth={true}
      helperText="confirmation error"
      label="Password confirmation"
      onChange={[Function]}
      required={true}
      type="password"
      value="confirmation value"
    />
    <PasswordRequirements
      password={
        Object {
          "error": "password error",
          "isValid": false,
          "value": "password value",
        }
      }
    />
  </WithStyles(ForwardRef(FormGroup))>
</WithStyles(ForwardRef(FormControl))>
`;
